WIP: improving draft

--- a/statika/poster/template.poster.tex
+++ b/statika/poster/template.poster.tex
@@ -59,6 +59,8 @@
 
 \usepackage{booktabs} % Top and bottom rules for tables
 
+\usepackage{array}
+
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION 
 %----------------------------------------------------------------------------------------
