Improved images resolution; included diagrams sources

--- a/statika/poster/template.poster.tex
+++ b/statika/poster/template.poster.tex
@@ -61,6 +61,8 @@
 
 \usepackage{array}
 
+% \usepackage{svg}
+
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION 
 %----------------------------------------------------------------------------------------
